@@ -58,6 +58,7 @@ use vars qw(%Usage);
    proxyssl_url  => 'url for testing ProxyPass / https (default is localhost)',
    sslca         => 'location of SSL CA (default is $t_conf/ssl/ca)',
    sslcaorg      => 'SSL CA organization to use for tests (default is asf)',
+   libmodperl    => 'path to mod_perl\'s .so (full or relative to LIBEXECDIR)',
    (map { $_ . '_module_name', "$_ module name"} qw(cgi ssl thread access auth)),
 );
 
