@@ -8,6 +8,11 @@ Changes - Apache::Test change logfile
 
 =item 1.01-dev
 
+new configuration option: -libmodperl [path/to/]mod_perl.so (so one
+can build several DSO objects, rename them, so several builds can
+co-exist under the same LIBEXECDIR and test them all. Mainly useful
+for testing 3rd party modules, with different mod_perl DSO builds. [Stas]
+
 set $Apache::Test5005compat::VERSION because of the bogus warnings
 generated by EU::MM::parse_version() when it sees
 $NOT_THIS_MODULE::VERSION [Randal L. Schwartz <merlyn@stonehenge.com>]
